--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service
-            android:name=".BackgroundService"
+            android:name=".services.BackgroundService"
             android:enabled="true"
             android:exported="true"></service>
 
-        <activity android:name=".DetailsActivity" />
-        <activity android:name=".ListActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.DetailsActivity" />
+        <activity android:name=".activities.ListActivity" />
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
