--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,15 @@
             android:exported="true"></service>
 
         <activity android:name=".activities.DetailsActivity" />
-        <activity android:name=".activities.ListActivity" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.MainActivity">
+
         </activity>
     </application>
 
